# Huffman

./: CMakeLists.txt  Huffman.cpp  Huffman.h  HuffmanException.h  Tree.cpp  Tree.h  main.cpp
include/: Huffman.h  HuffmanException.h  Tree.h
src/: Huffman.cpp  HuffmanException.cpp  Tree.cpp  main.cpp
test/: Huffman_test.cpp  Huffman_test.h  autotest.cpp  autotest.h  test.cpp
test_files/: tests.txt
